Move mobile stuff to the beginning

--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@ class: middle, title-slide
 ---
 class: center, middle
 
+.fourty[![](images/consumer_barometer.png)]
+
+---
+class: middle, center
+
+# APIs being nice to mobile users means:
+* Avoid multiple requests
+* Avoid sending unnecessary data
+
+---
+class: center, middle
+
 .fifty[![schema](images/mandatory_apis.png)]
 
 ---
@@ -105,11 +117,6 @@ related info == another request
 
 ---
 
-class: center, middle
-
-.fourty[![](images/consumer_barometer.png)]
-
----
 
 class: center, middle
 
