--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 class: middle, title-slide
 
-# The EnerGuide Project
-## APIs@CDS
+# The EnerGuide API
+## Unlocking NRCAN's data
 
 ---
 class: center
@@ -24,10 +24,11 @@ class: center
 ---
 class: middle, center
 
-# Who's using Energuide data
+# Who's using EnerGuide data
 
-* Many levels of government (federal, provincial, municipal)
+* Many levels of government
 * Industry
+* Academia
 * Developers within NRCAN
 
 *Everyone wants something different*
@@ -35,7 +36,7 @@ class: middle, center
 ---
 class: middle, center
 
-# How people get Energuide data now
+# How people Get EnerGuide data now
 
 .twenty[![](images/goc_data_sharing.svg)]
 
@@ -97,10 +98,10 @@ class: middle, center
 
 class: middle, center
 
-# NRCAN partner example: Vancouver
+# NRCAN partner example
 
-> MetroVan has been wrestling with ways to figure out how to analyze and map
-> out ERS data at the 3 digit postal code.
+> [Metro Vancouver] has been wrestling with ways to figure out how to analyze and map
+> out [energy] data at the 3 digit postal code.
 
 ---
 
@@ -114,7 +115,7 @@ class: center, middle
 ---
 class: middle, center
 
-# NRCAN wins too: Visbility
+# Public servants are users too
 
 ---
 class: center, middle
