--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 class: middle, title-slide
 
 # The EnerGuide API
-## Unlocking NRCAN's data
+## Unlocking NRCan's data
 
 ---
 class: middle, center
