Adding French translations

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 class: middle, title-slide
 
-# The EnerGuide API
-## Unlocking NRCan's data
+# L’interface de programmation d’applications (API) d’ÉnerGuide
+## Déverrouiller l’accès aux données de RNCAN
 
 ---
 class: middle, center
@@ -27,12 +27,12 @@ class: middle, center
 
 # EnerGuide data is already being used
 
-* Many levels of government
-* Developers within NRCan
-* Industry
-* Academia
+* De nombreux ordres du gouvernement
+* Les développeurs de RNCAN
+* Le milieu universitaire
+* L’industrie
 
-*Everyone wants something different*
+*Tout le monde veut des choses différentes*
 
 ---
 class: middle, center
@@ -58,19 +58,18 @@ class: middle, center
 ---
 class: middle, center
 
-# User-centric APIs?
+# Des API axés sur les utilisateurs?
 
-> GraphQL is unapologetically driven by the requirements of views and the front‐end engineers that write them. GraphQL starts with their way of thinking and requirements and builds the language and runtime necessary to enable that.
-
+> GraphQL est incontestablement axé sur les exigences en matière de vues et les ingénieurs principaux qui les codent. GraphQL se fonde sur leur méthode de pensée et leurs exigences, et établit le langage et l’exécution dont ils ont besoin.
 ---
 
 
 class: middle, center
 
-# NRCan partner example
+# Exemple d’un partenaire de RNCAN
 
-> [Metro Vancouver] has been wrestling with ways to figure out how to analyze and map
-> out [energy] data at the 3 digit postal code.
+> [La région métropolitaine de Vancouver] tente de trouver des moyens d’analyser et de
+> décrire les données sur [l’énergie] triées en fonction des trois premiers caractères du code postal.
 
 ---
 
@@ -79,12 +78,12 @@ class: middle, center
 ---
 class: center, middle
 
-> Upon learning about the API, Metro Vancouver realized that it [the API] would completely solve their problem...there was even crying and laughter involved upon this realization. <cite>Partner at NRCan</cite>
+> Quand ils ont découvert l’API, Métro Vancouver s’est rendu compte qu’il s’agissait d’une solution parfaite à leur problème... une prise de conscience qui a suscité des rires et des larmes! <cite>Partenaire de RNCAN</cite>
 
 ---
 class: middle, center
 
-# Public servants are users too
+# Les fonctionnaires sont aussi des utilisateurs
 
 ---
 class: center, middle
@@ -106,7 +105,7 @@ class: middle, center
 ---
 class: middle, center
 
-> Given a number of alternatives, choose the one that makes future change easier.<cite>Dave Thomas</cite>
+> Si vous avez le choix entre plusieurs possibilités, choisissez celle qui facilitera le changement à l’avenir.<cite>Dave Thomas</cite>
 
     </textarea>
     <script src="js/remark.min.js"></script>
