--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@ class: middle, title-slide
 ---
 class: middle, center
 
-# EnerGuide data
+# Données EnerGuide
 
-* Collecting data since 1997
-* 3 formats (binary, database rows, XML)
+* Collection des données depuis 1997
+* 3 formats (binaire, rangées de base de données, XML)
 * ~360 variables
-* 1.1 million records now accessible via API (so far)
+* 1.1 million de dossiers maintenant accessible via l'API (à date)
 
 ---
 class: middle, center
 
-# EnerGuide data is already being used
+# Données de l'EnerGuide déjà utilisées
 
-* De nombreux ordres du gouvernement
+* Plusieurs paliers de gouvernement
 * Les développeurs de RNCAN
 * Le milieu universitaire
 * L’industrie
@@ -37,21 +37,21 @@ class: middle, center
 ---
 class: middle, center
 
-# Those who want the data have to ask
+# Ceux qui veulent les données doivent demander
 
 .twenty[![](images/goc_data_sharing.svg)]
 
 ---
 class: middle, center
 
-# Backing up a step: APIs
+# Mais tout d'abord : les API
 
 .fifty[![APIs are servers serving data](images/apis.png)]
 
 ---
 class: middle, center
 
-# NRCan *is* the API
+# RNCan *est* l'API
 
 .twenty[![](images/goc_data_sharing.svg)]
 
@@ -94,7 +94,7 @@ class: center, middle
 
 class: middle, center
 
-# Going forward...
+# À l'avenir...
 
 ---
 
