--- a/index.html
+++ b/index.html
@@ -9,26 +9,26 @@
 
 class: middle, title-slide
 
-# L’interface de programmation d’applications (API) d’ÉnerGuide
-## Déverrouiller l’accès aux données de RNCAN
+# L’interface de programmation d’applications (API) de l’ÉnerGuide
+## Déverrouiller l’accès aux données de RNCan
 
 ---
 class: middle, center
 
-# Données EnerGuide
+# Données ÉnerGuide
 
 * Collection des données depuis 1997
 * 3 formats (binaire, rangées de base de données, XML)
 * ~360 variables
-* 1.1 million de dossiers maintenant accessible via l'API (à date)
+* 1,1 million de dossiers maintenant accessible via l'API (à date)
 
 ---
 class: middle, center
 
-# Données de l'EnerGuide déjà utilisées
+# Données de l'ÉnerGuide déjà utilisées
 
 * Plusieurs paliers de gouvernement
-* Les développeurs de RNCAN
+* Les développeurs de RNCan
 * Le milieu universitaire
 * L’industrie
 
@@ -58,7 +58,7 @@ class: middle, center
 ---
 class: middle, center
 
-# Des API axés sur les utilisateurs?
+# Des API axées sur les utilisateurs?
 
 > GraphQL est incontestablement axé sur les exigences en matière de vues et les ingénieurs principaux qui les codent. GraphQL se fonde sur leur méthode de pensée et leurs exigences, et établit le langage et l’exécution dont ils ont besoin.
 ---
@@ -66,9 +66,9 @@ class: middle, center
 
 class: middle, center
 
-# Exemple d’un partenaire de RNCAN
+# Exemple d’un partenaire de RNCan
 
-> [La région métropolitaine de Vancouver] tente de trouver des moyens d’analyser et de
+> [Vancouver Metro] tente de trouver des moyens d’analyser et de
 > décrire les données sur [l’énergie] triées en fonction des trois premiers caractères du code postal.
 
 ---
@@ -78,7 +78,7 @@ class: middle, center
 ---
 class: center, middle
 
-> Quand ils ont découvert l’API, Métro Vancouver s’est rendu compte qu’il s’agissait d’une solution parfaite à leur problème... une prise de conscience qui a suscité des rires et des larmes! <cite>Partenaire de RNCAN</cite>
+> Quand ils ont découvert l’API, Vancouver Metro s’est rendu compte qu’il s’agissait d’une solution parfaite à leur problème... une prise de conscience qui a suscité des rires et des larmes! <cite>Partenaire de RNCan</cite>
 
 ---
 class: middle, center
@@ -94,7 +94,7 @@ class: center, middle
 
 class: middle, center
 
-# À l'avenir...
+# Prochaines étapes
 
 ---
 
