fixed quotes from Dave to fix orphan

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ class: middle, center
 ---
 class: middle, center
 
-> Si vous avez le choix entre plusieurs possibilités, choisissez celle qui facilitera le changement à l’avenir.<cite>Dave Thomas</cite>
+> Si vous avez le choix entre plusieurs possibilités,<br/>choisissez celle qui facilitera le changement à l’avenir.<cite>Dave Thomas</cite>
 
     </textarea>
     <script src="js/remark.min.js"></script>
